--- a/pages/blog.html
+++ b/pages/blog.html
@@ -36,9 +36,7 @@
         <h1 class="blog__title">Blog</h1>
         <div class="blog__pointers">
             <a href="#">Home</a>
-            <a class="blog__pointers-arrow" href="#">
-                <img src="../img/icon/arrow.svg" alt="arrow right">
-            </a>
+            <a href="#" class="arrow"></a>
             <a class="blog__pointers-blog" href="#">Blog</a>
         </div>
     <section>
@@ -89,10 +87,10 @@
         <div class="pointers">
             <a class="blog-arrow-l"  href="#">
                 <img src="../img/icon/arrow-l.svg" alt="arrow left"></a> 
-            <a class="pointers-active" href="#">1</a> 
-            <a href="#">2</a> 
-            <a href="#">3</a> 
-            <a href="#">4</a> 
+            <a class="blog-pointers" href="#">1</a> 
+            <a class="blog-pointers" href="#">2</a> 
+            <a class="blog-pointers" href="#">3</a> 
+            <a class="blog-pointers" href="#">4</a> 
             <a class="blog-arrow-r"  href="#">
                 <img src="../img/icon/arrow-r.svg" alt="arrow right"></a>
         </div> 
@@ -127,7 +125,7 @@
             <section>
                 <p class="footer-item footer__title">Connect</p>
                 <form action="" class="footer__form">
-                <input class="emailbutton" type="text">
+                <input class="emailbutton" type="text" placeholder="Email">
                 <button class="joinbutton" type="submit" >JOIN</button>
                 </form>
                 <a href="#">
