--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -29,9 +29,12 @@
     <main>
         <section class="container">
         <h1 class="catalog__title">Category Products</h1>
-        <p class="home">Home</p> 
-        <a class="arrow" href="#"><img src="../img/arrow.png" alt="arrow" width="8" height="12"></a> 
-        <p class="catalog-transparent">Catalog</p>
+       <p class="catalog-list">
+            <a href="#"> Home</a>
+            <a href="#" class="arrow catalog__arrow"> 
+            <a href="#"> Catalog</a>
+        </p>
+        
         <ul class="catalog-1">
             <li class="catalog-item"><img src="../img/sweater.jpg" alt="sweater" width="280" height="270" ><a href="#"> <p class="catalog-1__link">APPAREL <br> KIDS</p> </a></li>
             <li class="catalog-item"><img src="../img/sock.jpg" alt="sock" width="280" height="270"><a href="#"><p class="catalog-1__link">HOLIDAY <br> SHOP</p> </a></li>
@@ -79,7 +82,7 @@
         <section >
             <p class="footer-item footer__title">Connect</p>
             <form action="" class="footer__form">
-            <input class="emailbutton" type="text">
+            <input class="emailbutton" type="text" placeholder="Email">
             <button class="joinbutton" type="submit" >JOIN</button>
             </form>
             <a  href="#"><img class="scnetwork facebook" src="../img/icon/facebook.svg" alt="facebook"></a>
