--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,9 +37,7 @@
             <h1 class="contact__title">Contact Us</h1>
             <div class="contact__pointers">
                 <a href="#">Home</a>
-                <a class="contact__pointers-arrow" href="#">
-                    <img src="../img/icon/arrow.svg" alt="arrow right">
-                </a>
+                <a href="#" class="arrow"></a>
                 <a class="contact__pointers-blog" href="#">Contact us</a>
             </div>
             <section class="contact__items">
@@ -106,7 +104,7 @@
             <section>
                 <p class="footer-item footer__title">Connect</p>
                 <form action="" class="footer__form">
-                <input class="emailbutton" type="text">
+                <input class="emailbutton" type="text" placeholder="Email">
                 <button class="joinbutton" type="submit" >JOIN</button>
                 </form>
                 <a href="#">
