--- a/pages/toys.html
+++ b/pages/toys.html
@@ -90,11 +90,12 @@
     <section class="container">
         <ul class="toys-products">
             <section class="products__list-1">
-            <li>
-                <a href="#" class="products__picture" ><img  src="../img/sharky.jpg" alt="sharky" width="380" height="385" ></a>
-                <p class="price-title">SHARKY BEAN BAG CHAIR COVER</p>
-                <p class="price">$60.00 USD</p>
-        </li>
+                <li>
+                    <a href="#"><img src="../img/sharky.jpg" alt="brass" width="380" height="385"></a>
+                    <p class="price-title">SHARKY BEAN BAG CHAIR COVER</p>
+                    <p class="price">$60.00 USD</p>
+            </li>
+          
             <li>
                 <a href="#"><img src="../img/brass.jpg" alt="brass" width="380" height="385"></a>
                 <p class="price-title">BRASS DECO FRAMES</p>
@@ -163,7 +164,7 @@
         <section >
             <p class="footer-item footer__title">Connect</p>
             <form action="" class="footer__form">
-            <input class="emailbutton" type="text">
+            <input class="emailbutton" type="text" placeholder="Email">
             <button class="joinbutton" type="submit" >JOIN</button>
             </form>
         
